Ajout de nouveau models

--- a/learning/index.html
+++ b/learning/index.html
@@ -10,6 +10,10 @@
     <title>Voiture</title>
   </head>
   <body>
+    <div>
+      <p>Meilleure fitness: <span id="best-fitness">0</span></p>
+      <p>Génération de la meilleure fitness: <span id="best-generation">0</span></p>
+    </div>
     <script src="nn.js"></script>
     <script src="ga.js"></script>
     <script src="ray.js"></script>
