--- a/Course/index.html
+++ b/Course/index.html
@@ -14,7 +14,7 @@
     <div id="overlay">
       <img src="/Course/design/logo.png" alt="Logo" id="logo">
       <h1 class="animated-title">Bienvenue dans le Jeu de Voiture</h1>
-      <p class="instructions">c'est un jeux pour montrer l'utilité de l'apprentissage pour 3 voitures avec 3 cerveaux differents.</p>
+      <p class="instructions">c'est un jeux pour montrer l'utilité de l'apprentissage pour 3 voitures avec 3 cerveaux differents en effectuant la course dans des trajets differents.</p>
       <div id="lapsSelection">
         <select id="lapsDropdown">
           <option value="" disabled selected>Choisissez le nombre de tours</option>
