--- a/Course/index.html
+++ b/Course/index.html
@@ -18,15 +18,20 @@
       <div id="lapsSelection">
         <select id="lapsDropdown">
           <option value="" disabled selected>Choisissez le nombre de tours</option>
+          <option value="3">3 Tours</option>
           <option value="5">5 Tours</option>
           <option value="10">10 Tours</option>
           <option value="15">15 Tours</option>
         </select>
       </div>
-      <button id="playButton">Play</button>
+      <p id="chooseLapsMessage" class="instructions">Veuillez choisir le nombre de tours avant de commencer le jeu.</p>
+      <button id="playButton" disabled>Play</button>
     </div>
     <div id="background">
       <img src="/Course/design/mario_kart_background.png" alt="Mario Kart Background" id="backgroundImage">
+    </div>
+    <div id="speedSliderContainer">
+      <input type="range" id="speedSlider" min="1" max="10" value="1">
     </div>
     <div id="carInfoContainer"></div>
     <div id="leaderboardContainer"></div>
