--- a/Course/index.html
+++ b/Course/index.html
@@ -26,9 +26,9 @@
       <p id="chooseLapsMessage" class="instructions">Veuillez choisir le nombre de tours avant de commencer le jeu.</p>
       <button id="playButton" disabled>Play</button>
     </div>
-    <div id="background">
-      <img src="/Course/design/mario_kart_background.jpg" alt="Mario Kart Background" id="backgroundImage">
-    </div>
+      <div 
+        id="background"><img src="./design/mario_kart_background.jpg" alt="Mario Kart Background" id="backgroundImage">
+      </div>
     <div id="leaderboardContainer"></div>
     <script src="ray.js"></script>
     <script src="boundary.js"></script>
