--- a/Course/index.html
+++ b/Course/index.html
@@ -27,7 +27,7 @@
       <button id="playButton" disabled>Play</button>
     </div>
     <div id="background">
-      <img src="/Course/design/mario_kart_background.jpg" alt="Mario Kart Background" id="backgroundImage">
+      <img src="./design/mario_kart_background.jpg" alt="Mario Kart Background" id="backgroundImage">
     </div>
     <div id="leaderboardContainer"></div>
     <div id="debugMessage">Appuyez sur D pour le mode debug</div>
